first js file is created

--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    
 </head>
 <body>
     <h1>Welcome</h1>
     <p>Modern JS tutorial here</p>
+
+    <!-- <script>
+        alert('Hello world');
+    </script> -->
+
+    <script src="sandbox.js"></script>
+
 </body>
 </html>
