select one code by query selector

--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
 </head>
 <body>
     <h1>Welcome</h1>
-    <p>Modern JS tutorial here</p>
+    
+    <div>
+        <p>hello, world</p>
+        <p>lorem ipsum</p>
+        <p class="error">this is an error message</p>
+    </div>
 
-    <!-- <script>
-        alert('Hello world');
-    </script> -->
+    <div class="error">this is an error message</div>
 
     <script src="sandbox.js"></script>
-
 </body>
 </html>
