--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     
 </head>
 <body>
-    <h1>Welcome</h1>
+    <h1 class="main_headline">Welcome</h1>
     
     <div>
         <p>hello, world</p>
