add and remove classes

--- a/index.html
+++ b/index.html
@@ -3,19 +3,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title id="pageTitle">Document</title>
     
 </head>
 <body>
-    <h1 class="main_headline">Welcome</h1>
+    <h1>The DOM</h1>
     
-    <div>
-        <p>hello, world</p>
-        <p>lorem ipsum</p>
-        <p class="error">this is an error message</p>
-    </div>
-
-    <div class="error">this is an error message</div>
+    <p class="success">
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur, ea vitae ipsam voluptas laudantium cupiditate earum pariatur qui dolore quos omnis suscipit mollitia. Velit excepturi dolorum itaque vitae, corrupti odio.
+    </p>
 
     <script src="sandbox.js"></script>
 </body>
