read text inside tags and add classes for them

--- a/index.html
+++ b/index.html
@@ -10,9 +10,15 @@
 <body>
     <h1>The DOM</h1>
     
-    <p class="success">
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur, ea vitae ipsam voluptas laudantium cupiditate earum pariatur qui dolore quos omnis suscipit mollitia. Velit excepturi dolorum itaque vitae, corrupti odio.
-    </p>
+    <p>lorem error ipsum</p>
+    <p>lorem success ipsum</p>
+    <p>lorem ipsum ipsum</p>
+    <p>lorem ipsum success</p>
+    <p>error lorem ipsum</p>
+    <p>lorem ipsum lorem</p>
+    <p>lorem ipsum error</p>
+    <p>success lorem ipsum</p>
+    
 
     <script src="sandbox.js"></script>
 </body>
